update toolbar title

--- a/sample_files/home.page.html
+++ b/sample_files/home.page.html
@@ -1,7 +1,7 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-title>
-      BlinkID Sample App
+      BlinkID Sample
     </ion-title>
   </ion-toolbar>
 </ion-header>
